--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 
 body {
     margin-top: 0px;
+	text-align:justify;
 }
 
 #logo {
@@ -21,4 +22,19 @@ body {
 #footer{
     background-color:#008f93;
     text-align: center;
+}
+p{
+	padding: 10px 18px 18px 18px;
+	font-size:150%;
+	
+}
+p Strong{
+	color:#008f93;
+}
+h1 span{
+	font-family:sans-serif;
+	color: #008f93;
+	border: 5px dashed #008f93;
+	padding:5px 10px 10px 10px;
+	margin: 18px;
 }
