--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+	font-family:Quickstand, sans-serif;
+}
+
 .float-middle {
     float: center;
 }
@@ -32,7 +36,7 @@ p Strong{
 	color:#008f93;
 }
 h1 span{
-	font-family:sans-serif;
+	font-family:Quickstand, sans-serif;
 	color: #008f93;
 	border: 5px dashed #008f93;
 	padding:5px 10px 10px 10px;
